Made FunctionalData hashable Modified GeneFunctionProcessor deal with multiple reads that have the same functional tags.  This is needed for MetaGene expression UMIIterator only compresses records for faster I/O if the reads aren't going to be retained for further processing